--- a/package.json
+++ b/package.json
@@ -5,16 +5,27 @@
     "scripts": {
         "build": "vite build",
         "ziggy": "php artisan ziggy:generate resources/js/ziggy.js",
-        "dev": "npm run ziggy && vite"
+        "dev": "npm run ziggy && vite",
+        "lint": "eslint --ext .js,.vue resources/js",
+        "format": "prettier --write \"resources/js/**/*.{js,vue}\""
     },
     "devDependencies": {
+        "@eslint/js": "^9.31.0",
         "@inertiajs/vue3": "^2.0.0",
         "@tailwindcss/forms": "^0.5.10",
         "@tailwindcss/typography": "^0.5.16",
         "@vitejs/plugin-vue": "^5.0.0",
+        "@vue/eslint-config-typescript": "^14.6.0",
         "axios": "^1.8.2",
         "concurrently": "^9.0.1",
+        "eslint": "^9.31.0",
+        "eslint-config-prettier": "^10.1.5",
+        "eslint-plugin-prettier": "^5.5.1",
+        "eslint-plugin-vue": "^10.3.0",
+        "globals": "^16.3.0",
         "laravel-vite-plugin": "^1.2.0",
+        "prettier": "^3.6.2",
+        "typescript-eslint": "^8.37.0",
         "vite": "^6.2.4",
         "vue": "^3.4.0"
     },
@@ -24,6 +35,7 @@
         "@inertiajs/inertia": "^0.11.1",
         "@inertiajs/inertia-vue3": "^0.6.0",
         "@tailwindcss/vite": "^4.1.11",
+        "chart.js": "^4.5.0",
         "tailwindcss": "^4.1.11",
         "ziggy-js": "^2.5.3"
     }
