--- a/package.json
+++ b/package.json
@@ -35,7 +35,9 @@
         "@inertiajs/inertia": "^0.11.1",
         "@inertiajs/inertia-vue3": "^0.6.0",
         "@tailwindcss/vite": "^4.1.11",
+        "@vueuse/core": "^13.5.0",
         "chart.js": "^4.5.0",
+        "dayjs": "^1.11.13",
         "tailwindcss": "^4.1.11",
         "ziggy-js": "^2.5.3"
     }
