end with report

--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
         "chart.js": "^4.5.0",
         "dayjs": "^1.11.13",
         "tailwindcss": "^4.1.11",
+        "xlsx": "^0.18.5",
         "ziggy-js": "^2.5.3"
     }
 }
