--- a/.env
+++ b/.env
@@ -20,10 +20,10 @@ LOG_STACK=single
 LOG_DEPRECATIONS_CHANNEL=null
 LOG_LEVEL=debug
 
-DB_CONNECTION=mysql
+DB_CONNECTION=sqlite
+DB_DATABASE=/var/www/database/database.sqlite
 DB_HOST=mysql
 DB_PORT=3306
-DB_DATABASE=/app/database/database.sqlite
 DB_USERNAME=sail
 DB_PASSWORD=password
 
