update docker file

--- a/.env
+++ b/.env
@@ -2,7 +2,9 @@ APP_NAME=Laravel
 APP_ENV=local
 APP_KEY=base64:wNbRy7ikIlEws4RTVH/ZPzktJ2y5uPL/mt68oYPmi1c=
 APP_DEBUG=true
-APP_URL=http://localhost
+VITE_HOST=0.0.0.0
+VITE_PORT=5173
+APP_URL=http://localhost:8000
 
 APP_LOCALE=en
 APP_FALLBACK_LOCALE=en
