--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
     "scripts": {
         "build": "vite build",
         "ziggy": "php artisan ziggy:generate resources/js/ziggy.js",
-        "dev": "npm run ziggy && vite",
+        "dev": " vite",
         "lint": "eslint --ext .js,.vue resources/js",
         "format": "prettier --write \"resources/js/**/*.{js,vue}\""
     },
